--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
 </head>
 <body>
     <main id="main">
-        <h1 id="title">Sabrina Carpenter</h1>
-        
-        <figure id="img-div">
-            <img 
-                id="image" 
-                src="https://th.bing.com/th/id/OIP.mWU2f46lPRWWaRFnnM7JTAHaHW?rs=1&pid=ImgDetMain" 
-                alt="Sabrina Carpenter" 
-            >
-            <figcaption id="img-caption">Sabrina Carpenter performing live on stage.</figcaption>
-        </figure>
-
-        <section id="tribute-info">
-            <p>Sabrina Annlynn Carpenter is an American singer, songwriter, and actress who has captivated audiences since her early years. Known for her remarkable talent and versatility, she began her journey as a young Disney star and has since evolved into a successful pop artist. Her music resonates with millions, blending elements of pop, R&B, and folk.</p>
-            <p>To learn more about Sabrina's journey and latest work, click the link below.</p>
-        </section>
+        <header>
+            <h1 id="title">Sabrina Carpenter</h1>
+        </header>
+            <section>
+            <div class="image">
+                <figure id="img-div">
+                    <img 
+                        id="image" 
+                        src="https://th.bing.com/th/id/OIP.mWU2f46lPRWWaRFnnM7JTAHaHW?rs=1&pid=ImgDetMain" 
+                        alt="Sabrina Carpenter">
+                    <figcaption id="img-caption">Sabrina Carpenter performing live on stage.</figcaption>
+                </figure>
+            </div>
+            </section>
+            <section id="tribute-info">
+                <p>Sabrina Annlynn Carpenter is an American singer, songwriter, and actress who has captivated audiences since her early years. Known for her remarkable talent and versatility, she began her journey as a young Disney star and has since evolved into a successful pop artist. Her music resonates with millions, blending elements of pop, R&B, and folk.</p>
+                <p>To learn more about Sabrina's journey and latest work, click the link below.</p>
+            </section>
 
         <a 
             id="tribute-link" 
